Trying to fix background header flicker bug with willchange: css

--- a/portfolio.css
+++ b/portfolio.css
@@ -78,6 +78,7 @@ header {
   max-width: 101%;
   margin-right: auto;
   margin-left: auto; 
+  will-change:top;
   
 
   background: linear-gradient(177deg, rgba(20,41,62,0.99), #f05d5e);
